--- a/HTML/2.1-markup/index.html
+++ b/HTML/2.1-markup/index.html
@@ -1,73 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../Icon.ico" />
+    <title>HTML - Markup</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="../Icon.ico" />
-  <title>HTML - Markup</title>
-</head>
+  <body>
+    <div>
+      <h1>I am an h1 header</h1>
+      <h2>I am an h2 header</h2>
+      <h3>I am an h3 header</h3>
+      <h4>I am an h4 header</h4>
+      <h5>I am an h5 header</h5>
+      <h6>
+        I am an h6 header, <br />
+        You may canot see this, but we are all neasted within a div element
+      </h6>
+    </div>
 
-<body>
-  <div>
-    <h1>I am an h1 header</h1>
-    <h2>I am an h2 header</h2>
-    <h3>I am an h3 header</h3>
-    <h4>I am an h4 header</h4>
-    <h5>I am an h5 header</h5>
-    <h6>I am an h6 header, <br> You may canot see this, but we are all neasted within a div element</b></h6>
-  </div>
-  <p>I am a paregraph</p>
-  <p>
-    In this paregraph - some elements <i>are italic</i> and some
-    <strong> are bold</strong>
-  </p>
-  <p>
-    Here is a
-    <a href="https://www.appleseeds.org.il" target="_blank"> link to Appleseeds NGO website</a>
-  </p>
-  <p>And here is a <a href="https://google.com" target="_blank"> link to google</a></p>
-  <br />
-  <p>This "git" logo's src is git-scm.com website:</p>
-  <img src="https://git-scm.com/images/logo@2x.png" width="150px" alt="git logo" title="git" />
-  <br />
-  <br />
-  <p>While this rubber ducky's src in a local directory</p>
-  <img src="/2.1-markup/rubber_duck.jpg" width="180px" alt="Rubber ducky" title="rubber duccy" />
+    <div>
+      <p>I am a paregraph</p>
+      <p>
+        In this paregraph - some elements <i>are italic</i> and some
+        <strong> are bold</strong>
+      </p>
+    </div>
 
-  <p>
-    <cite>
-      The "cite" tag defines the title of a creative work (e.g. a book, a poem, a song, a movie, a painting, a
-      sculpture, etc.)
-    </cite> .(w3schools.com)
-  </p>
-  <p>
+    <div>
+      <p>
+        Here is a
+        <a href="https://www.appleseeds.org.il" target="_blank">
+          link to Appleseeds NGO website</a
+        >
+      </p>
+      <p>
+        And here is a
+        <a href="https://google.com" target="_blank"> link to google</a>
+      </p>
+      <br />
+    </div>
 
-    The mark tag defines text that should be <mark>marked or highlighted</mark>.
-  </p>
-  <p>I am a <sup>superscript</sup> text.</p>
-  <p>I am a <sub>subscript</sub> text.</p>
-  <p><small>This text </small>is small</p>
+    <div>
+      <p>This "git" logo's src is git-scm.com website:</p>
+      <img
+        src="https://git-scm.com/images/logo@2x.png"
+        width="150px"
+        alt="git logo"
+        title="git"
+      />
+      <br />
+      <br />
+      <p>While this rubber ducky's src in a local directory</p>
+      <img
+        src="/2.1-markup/rubber_duck.jpg"
+        width="180px"
+        alt="Rubber ducky"
+        title="rubber duccy"
+      />
+    </div>
 
-
-
-  <p>This text will go right-to-left: <bdo dir="rtl">This text will go right-to-left</bdo> using the bdo tag </p>
-
-
-
-  <!-- <p>The audio markup allows us to add sound files to the site. This is for example the anthem of Ukraine: </p>
-<audio controls>
-  <source src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Anthem_of_Ukraine_instrumental.ogg" type="audio/ogg" >
-  
-</audio>
-
-<p>The <strong>iframe element</strong> is used to embed external HTML pages in my page:</p>
-<iframe src="https://www.wikipedia.org/" frameborder="1" width="80%"></iframe>
-
-  
-    <dialog open>I am a dialog window, <br>I can be used to create popup dialogs and modals on a web page
-    </dialog> -->
-</body>
-
+    <div>
+      <p>
+        <cite>
+          The "cite" tag defines the title of a creative work (e.g. a book, a
+          poem, a song, a movie, a painting, a sculpture, etc.)
+        </cite>
+        .(w3schools.com)
+      </p>
+      <p>
+        The mark tag defines text that should be
+        <mark>marked or highlighted</mark>.
+      </p>
+      <p>I am a <sup>superscript</sup> text.</p>
+      <p>I am a <sub>subscript</sub> text.</p>
+      <p><small>This text </small>is small</p>
+      <p>
+        This text will go right-to-left:
+        <bdo dir="rtl">This text will go right-to-left</bdo> using the bdo tag
+      </p>
+    </div>
+  </body>
 </html>
