--- a/CSS/7.2_refactor_with_floatsAssignment/index.html
+++ b/CSS/7.2_refactor_with_floatsAssignment/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/HTML/Icon.ico" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/OferTauber/My-Utils/main/Icon.ico"
+    />
     <script
       src="https://kit.fontawesome.com/5c4607dc13.js"
       crossorigin="anonymous"
@@ -29,7 +32,7 @@
       <div class="container">
         <h3>I'm a web developer, and this is kinda what i look like:</h3>
         <img
-          src="/HTML/2.4-First_web_page/images/my_image.JPG"
+          src="https://raw.githubusercontent.com/OferTauber/My-Utils/main/my_image.JPG"
           alt="Ofers image"
           title="This is me :)"
         />
