Refactor navbar and buttons

--- a/CSS/8.2 -refactor_navbar_buttons/index.html
+++ b/CSS/8.2 -refactor_navbar_buttons/index.html
@@ -4,8 +4,118 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/OferTauber/My-Utils/main/Icon.ico"
+    />
+    <script
+      src="https://kit.fontawesome.com/5c4607dc13.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bevan:ital@1&family=Bungee+Shade&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Ofer Tauber - FullStuck developer</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="header-container" class="container">
+        <h1>Hi there! my name is Ofer :)</h1>
+      </div>
+    </header>
+    <nav>
+      <div class="navbar">
+        <img
+          src="https://raw.githubusercontent.com/OferTauber/My-Utils/main/logo-p.png"
+          alt="My logo"
+        />
+        <ul>
+          <li>
+            <a href="mailto:ofertauber@gmail.com" target="_blanck">Email</a>
+          </li>
+          <li>
+            <a href="https://github.com/OferTauber" target="_blanck">
+              GitHub
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/ofertauber/" target="_blanck">
+              Linkedin
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/otauber" target="_blanck">
+              Facebook
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="clr"></div>
+    <main>
+      <div class="container">
+        <h3>I'm a web developer, and this is kinda what i look like:</h3>
+        <img
+          src="https://raw.githubusercontent.com/OferTauber/My-Utils/main/my_image.JPG"
+          alt="Ofers image"
+          title="This is me :)"
+        />
+        <div class="clr"></div>
+        <!-- style="width: 300px; border-radius: 10px" -->
+        <h4>About me:</h4>
+        <div>
+          <div class="square-cards" id="card1">
+            <p>
+              I am 34 <br />
+              years old, <br />
+              living in <br />
+              Tel Aviv
+            </p>
+          </div>
+          <div class="square-cards" id="card2">
+            <p>Bachelor of Science in Marine Biology</p>
+          </div>
+          <div class="square-cards" id="card3">
+            <p>I am certified with skipper and divemaster license</p>
+          </div>
+          <div class="square-cards" id="card4">
+            <p>In my free time i'm into photography, cooking and hiking</p>
+          </div>
+        </div>
+        <div class="clr"></div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>You can contact me via:</p>
+        <ul>
+          <li class="raund-card">
+            <a
+              href="https://www.facebook.com/otauber"
+              target="_blanck"
+              id="facebook"
+              ><span class="fab fa-facebook"></span
+            ></a>
+          </li>
+          <li class="raund-card">
+            <a href="https://www.linkedin.com/in/ofertauber/" target="_blanck"
+              ><span class="fab fa-linkedin"></span
+            ></a>
+          </li>
+          <li class="raund-card">
+            <a href="https://github.com/OferTauber" target="_blanck"
+              ><span class="fab fa-github"></span
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <!-- <div class="spacer"></div> -->
+    </footer>
+  </body>
 </html>
