--- a/CSS/9.1-positioning/index.html
+++ b/CSS/9.1-positioning/index.html
@@ -7,5 +7,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <body>
+      <div id="outer">
+        <div id="inner"></div>
+      </div>
+    </body>
+  </body>
 </html>
