--- a/CSS/9.2-positioning-2/index.html
+++ b/CSS/9.2-positioning-2/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Positioning2</title>
   </head>
-  <body></body>
+  <body>
+    <body>
+      <div id="outer">
+        Box title
+        <div id="inner"></div>
+      </div>
+    </body>
+  </body>
 </html>
