--- a/CSS/24.3-responsive_grid/index.html
+++ b/CSS/24.3-responsive_grid/index.html
@@ -16,56 +16,97 @@
         background-color: #f4f4f4;
       }
       .grid-container {
-        max-width: 800px;
+        /* max-width: 1300px; */
         padding: 15px;
         margin: auto;
-        margin-top: 50px;
+        /* margin-top: 50px; */
         display: grid;
+        /* grid-template-rows: repeat(5, auto); */
+        grid-template-rows: auto auto 1fr auto auto;
+        height: 100vh;
         grid-gap: 1rem;
-        grid-template-areas:
-          'item1 item1 item2 item2'
-          'item3 item4 item4 item4'
-          'item5 item5 item5 item5';
+      }
+
+      @media (min-width: 767px) {
+        .grid-container {
+          grid-template-rows: auto 2fr;
+          grid-template-areas:
+            'item1 item1 item1'
+            'item2 item3 item3'
+            'item4 item4 item4'
+            'item5 item5 item5';
+        }
+        #item1 {
+          grid-area: item1;
+        }
+        #item2 {
+          grid-area: item2;
+        }
+        #item3 {
+          grid-area: item3;
+        }
+        #item4 {
+          grid-area: item4;
+        }
+        #item5 {
+          grid-area: item5;
+        }
+      }
+
+      @media (min-width: 1240px) {
+        .grid-container {
+          grid-template-rows: auto 2fr;
+          grid-template-columns: 1fr 8fr 1fr;
+          grid-template-areas:
+            'item1 item1 item1'
+            'item2 item3 item4'
+            'item5 item5 item5';
+        }
       }
 
       .item {
         border: 1px #ccc solid;
         border-radius: 15px;
-        height: 6rem;
-        /* width: 4rem; */
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+          sans-serif;
+        font-size: x-large;
+        padding: 2rem;
       }
 
       #item1 {
         background-color: #227c9d;
-        grid-area: item1;
+        /* grid-area: item1; */
       }
       #item2 {
         background-color: #17c3b2;
-        grid-area: item2;
+        /* grid-area: item2; */
       }
       #item3 {
         background-color: #ffcb77;
-        grid-area: item3;
+        /* grid-area: item3; */
       }
       #item4 {
         background-color: #fef9ef;
-        grid-area: item4;
+        /* grid-area: item4; */
       }
       #item5 {
         background-color: #fe6d73;
-        grid-area: item5;
+        /* grid-area: item5; */
       }
     </style>
 
-    <title>CSS Grid Basics-1</title>
+    <title>CSS Responsive Grid</title>
   </head>
   <body>
     <div class="grid-container">
-      <div class="item" id="item1"></div>
-      <div class="item" id="item2"></div>
-      <div class="item" id="item3"></div>
-      <div class="item" id="item4"></div>
-      <div class="item" id="item5"></div>
+      <div class="item" id="item1">Header</div>
+      <div class="item" id="item2">Sidebar</div>
+      <div class="item" id="item3">
+        Content Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Repellendus quos expedita eveniet voluptate repudiandae eos?
+      </div>
+      <div class="item" id="item4">Sidebar2</div>
+      <div class="item" id="item5">Fotter</div>
     </div>
   </body>
 </html>
