--- a/JS/index.html
+++ b/JS/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>AppelSeeds tasks</h1>
-    <script src="./13 sort/13.1.js"></script>
+    <script src="./14 reduce/14.1.js"></script>
   </body>
 </html>
