--- a/JS/index.html
+++ b/JS/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>AppelSeeds tasks</h1>
-    <script src="./15/15.5.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
