--- a/JS/21/21.2 font-size/app.html
+++ b/JS/21/21.2 font-size/app.html
@@ -8,6 +8,12 @@
     <title>Document</title>
   </head>
   <body>
+    <p>You can change the font size using the + and - buttons</p>
+    <div>
+      <button class="increase">+</button>
+      <button class="decrease">-</button>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
