--- a/JS/21/21.5smiley/app.html
+++ b/JS/21/21.5smiley/app.html
@@ -8,6 +8,12 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>How many smileys do you want to see?</h2>
+    <form action="#">
+      <input type="text" class="num" id="" />
+      <button>Submit</button>
+    </form>
+    <div class="container"></div>
     <script src="./app.js"></script>
   </body>
 </html>
