guess_my_letter stayling

--- a/JS/22 Prevent Default and Form Events/22.3/index.html
+++ b/JS/22 Prevent Default and Form Events/22.3/index.html
@@ -8,12 +8,14 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to Guess my letter</h1>
-    <div class="seacret-letter">?</div>
-    <h4 class="massage"></h4>
-    <h3>Keys guessed</h3>
-    <h4 class="guessed"></h4>
-    <button class="play-agian">Play agian</button>
-    <script src="./app.js"></script>
+    <main>
+      <h1>Welcome to Guess my letter</h1>
+      <div class="seacret-letter">?</div>
+      <h4 class="massage"></h4>
+      <h3>Keys guessed:</h3>
+      <h4 class="guessed"></h4>
+      <button class="play-agian">Play agian?</button>
+      <script src="./app.js"></script>
+    </main>
   </body>
 </html>
