--- a/JS/index.html
+++ b/JS/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>AppelSeeds tasks</h1>
-    <script src="./app.js"></script>
+    <h1 class="element">AppelSeeds tasks</h1>
+    <script src="./23this/23.1-fundamentals of this.js"></script>
   </body>
 </html>
