--- a/JS/index.html
+++ b/JS/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1 class="element">AppelSeeds tasks</h1>
-    <script src="./24 prototypes/24.2pokeman.js"></script>
+    <script src="./24 prototypes/24.3Build your own methods.js"></script>
   </body>
 </html>
