--- a/JS/index.html
+++ b/JS/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1 class="element">AppelSeeds tasks</h1>
-    <script src="./26 asinc/27.1.js"></script>
+    <script src="./29/29.1.js"></script>
   </body>
 </html>
