--- a/CSS/19.5-spinners/index.html
+++ b/CSS/19.5-spinners/index.html
@@ -16,22 +16,22 @@
     <h1>Loading</h1>
     <div class="flex-container">
       <div class="flex-item">
-        <div id="spinner-1" class="ring"></div>
+        <div id="spinner-1" class="ring spinner"></div>
       </div>
       <div class="flex-item">
-        <div id="spinner-2" class="ring"></div>
+        <div id="spinner-2" class="ring spinner"></div>
       </div>
     </div>
     <div class="flex-container">
       <div class="flex-item">
-        <div id="flicker" class="dots">
+        <div id="flicker" class="dots spinner">
           <div class="dot-l dot"></div>
           <div class="dot-m dot"></div>
           <div class="dot-r dot"></div>
         </div>
       </div>
       <div class="flex-item">
-        <div id="jump" class="dots">
+        <div id="jump" class="dots spinner">
           <div class="dot-l dot"></div>
           <div class="dot-m dot"></div>
           <div class="dot-r dot"></div>
