--- a/React/mid-proj-sandbox/public/index.html
+++ b/React/mid-proj-sandbox/public/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Demo</title>
   </head>
   <body>
-    <script type="module" src="./script.js"></script>
+    <div id="root"></div>
   </body>
 </html>
